Kleopatra: Use default keyserver from gpg instead of hardcoded value
Closed, ResolvedPublic

Assigned To
Authored By
• ikloecker
Jun 29 2021, 11:52 AM
Tags
Subscribers

Description

Kleopatra should retrieve the default value for the OpenPGP keyserver from gpg instead of using a hardcoded value.

Event Timeline

• ikloecker triaged this task as Normal priority.
• ikloecker created this task.
• ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
• ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.