Use default value for OpenPGP keyserver provided by gpg

gpg has just changed its default because hkps.pool.sks-keyservers.net
is no more.

GnuPG-bug-id: 5514